@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: gtksplash.c,v 1.5 2003/01/21 21:58:46 gtw Exp $
+ * $Id: gtksplash.c,v 1.6 2003/01/22 16:16:09 gtw Exp $
  */
 
 #if HAVE_CONFIG_H
@@ -65,8 +65,10 @@ CreateSplash () {
 #if GTK_CHECK_VERSION(2,0,0)
   gtk_window_set_role( GTK_WINDOW( pgs->pwWindow ),
 		       "splash screen" );
+#if GTK_CHECK_VERSION(2,2,0)
   gtk_window_set_type_hint( GTK_WINDOW( pgs->pwWindow ),
 			    GDK_WINDOW_TYPE_HINT_SPLASHSCREEN );
+#endif
 #endif
   gtk_window_set_title ( GTK_WINDOW ( pgs->pwWindow ), 
                          _("Starting GNU Backgammon " VERSION ) );
